[tool.poetry]
authors = ["Bernard van Niekerk <bernard.van.niekerk@icloud.com>"]
description = "Serialize Pydantic models and non-JSONable types into a JSONable variable."
name = "jsonablr"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
pydantic = "^1.10"
python = "^3.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
rich = "^13.4.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
